--- a/Challenges/express/src/views/cartId.handlebars
+++ b/Challenges/express/src/views/cartId.handlebars
@@ -1,4 +1,4 @@
-<h1>Cart</h1>
+{{!-- <h1>Cart</h1>
 {{#each cart}}
   <p>
     <ul>
@@ -9,4 +9,40 @@
       <li>Code: {{this.code}}</li>
     </ul>
   </p>
-{{/each}}
+{{/each}} --}}
+
+<body>
+  <div class="Cart-Container">
+    <div class="Header">
+      <h3 class="Heading">Shopping Cart</h3>
+      <h5 class="Action">Remove all</h5>
+    </div>
+    <div class="Cart-Items">
+      <div class="about">
+        <h1 class="title">Apple Juice</h1>
+        <h3 class="subtitle">250ml</h3>
+      </div>
+      <div class="counter">
+        <div class="btn">+</div>
+        <div class="count">2</div>
+        <div class="btn">-</div>
+      </div>
+      <div class="prices">
+        <div class="amount">$2.99</div>
+        <div class="save"><u>Save for later</u></div>
+        <div class="remove"><u>Remove</u></div>
+      </div>
+    </div>
+    <hr />
+    <div class="checkout">
+      <div class="total">
+        <div>
+          <div class="Subtotal">Sub-Total</div>
+          <div class="items">2 items</div>
+        </div>
+        <div class="total-amount">$6.18</div>
+      </div>
+      <button class="button">Checkout</button>
+    </div>
+  </div>
+</body>
