--- a/Challenges/express/src/views/home.handlebars
+++ b/Challenges/express/src/views/home.handlebars
@@ -1,4 +1,4 @@
-<h1>Product List</h1>
+{{!-- <h1>Product List</h1>
 {{#each products}}
 <p>
     <ul>
@@ -9,7 +9,162 @@
         <li>Code: {{this.code}}</li>
     </ul>
 </p>
-{{/each}}
+{{/each}} --}}
 
-{{!-- <script src="/socket.io/socket.io.js"></script>
-<script src="/js/index.js"></script> --}}
+{{! <script src="/socket.io/socket.io.js"></script>
+<script src="/js/index.js"></script> }}
+
+<html>
+  <head>
+    <title>E-Commerce</title>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css" />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css?family=Raleway"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
+    <style>
+      body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", sans-serif}
+    </style>
+  </head>
+  <body class="w3-light-grey w3-content" style="max-width:1600px">
+
+    <!-- !PAGE CONTENT! -->
+    <div class="w3-main">
+
+      <!-- Header -->
+      <header id="portfolio">
+        <div class="w3-container">
+          <h1><b>Product List</b></h1>
+          <div class="w3-section w3-bottombar w3-padding-16">
+            <span class="w3-margin-right">Filter:</span>
+            <button class="w3-button w3-black">ALL</button>
+            <button class="w3-button w3-white">Category</button>
+            <button class="w3-button w3-white w3-hide-small">Stock</button>
+          </div>
+        </div>
+      </header>
+
+      <!-- First Photo Grid-->
+      <div class="w3-row-padding">
+        <div class="w3-third w3-container w3-margin-bottom">
+          <img
+            src="/w3images/mountains.jpg"
+            alt="Norway"
+            style="width:100%"
+            class="w3-hover-opacity"
+          />
+          <div class="w3-container w3-white">
+            <p><b>Lorem Ipsum</b></p>
+            <p>Praesent tincidunt sed tellus ut rutrum. Sed vitae justo
+              condimentum, porta lectus vitae, ultricies congue gravida diam non
+              fringilla.</p>
+          </div>
+        </div>
+        <div class="w3-third w3-container w3-margin-bottom">
+          <img
+            src="/w3images/lights.jpg"
+            alt="Norway"
+            style="width:100%"
+            class="w3-hover-opacity"
+          />
+          <div class="w3-container w3-white">
+            <p><b>Lorem Ipsum</b></p>
+            <p>Praesent tincidunt sed tellus ut rutrum. Sed vitae justo
+              condimentum, porta lectus vitae, ultricies congue gravida diam non
+              fringilla.</p>
+          </div>
+        </div>
+        <div class="w3-third w3-container">
+          <img
+            src="/w3images/nature.jpg"
+            alt="Norway"
+            style="width:100%"
+            class="w3-hover-opacity"
+          />
+          <div class="w3-container w3-white">
+            <p><b>Lorem Ipsum</b></p>
+            <p>Praesent tincidunt sed tellus ut rutrum. Sed vitae justo
+              condimentum, porta lectus vitae, ultricies congue gravida diam non
+              fringilla.</p>
+          </div>
+        </div>
+      </div>
+
+      <!-- Second Photo Grid-->
+      <div class="w3-row-padding">
+        <div class="w3-third w3-container w3-margin-bottom">
+          <img
+            src="/w3images/p1.jpg"
+            alt="Norway"
+            style="width:100%"
+            class="w3-hover-opacity"
+          />
+          <div class="w3-container w3-white">
+            <p><b>Lorem Ipsum</b></p>
+            <p>Praesent tincidunt sed tellus ut rutrum. Sed vitae justo
+              condimentum, porta lectus vitae, ultricies congue gravida diam non
+              fringilla.</p>
+          </div>
+        </div>
+        <div class="w3-third w3-container w3-margin-bottom">
+          <img
+            src="/w3images/p2.jpg"
+            alt="Norway"
+            style="width:100%"
+            class="w3-hover-opacity"
+          />
+          <div class="w3-container w3-white">
+            <p><b>Lorem Ipsum</b></p>
+            <p>Praesent tincidunt sed tellus ut rutrum. Sed vitae justo
+              condimentum, porta lectus vitae, ultricies congue gravida diam non
+              fringilla.</p>
+          </div>
+        </div>
+        <div class="w3-third w3-container">
+          <img
+            src="/w3images/p3.jpg"
+            alt="Norway"
+            style="width:100%"
+            class="w3-hover-opacity"
+          />
+          <div class="w3-container w3-white">
+            <p><b>Lorem Ipsum</b></p>
+            <p>Praesent tincidunt sed tellus ut rutrum. Sed vitae justo
+              condimentum, porta lectus vitae, ultricies congue gravida diam non
+              fringilla.</p>
+          </div>
+        </div>
+      </div>
+
+      <!-- Pagination -->
+      <div class="w3-center w3-padding-32">
+        <div class="w3-bar">
+          <a href="#" class="w3-bar-item w3-button w3-hover-black">«</a>
+          <a href="#" class="w3-bar-item w3-black w3-button">1</a>
+          <a href="#" class="w3-bar-item w3-button w3-hover-black">2</a>
+          <a href="#" class="w3-bar-item w3-button w3-hover-black">3</a>
+          <a href="#" class="w3-bar-item w3-button w3-hover-black">4</a>
+          <a href="#" class="w3-bar-item w3-button w3-hover-black">»</a>
+        </div>
+      </div>
+
+      </footer>
+
+      <div class="w3-black w3-center w3-padding-24">Powered by
+        <a
+          href="https://www.w3schools.com/w3css/default.asp"
+          title="W3.CSS"
+          target="_blank"
+          class="w3-hover-opacity"
+        >matias gays</a></div>
+    </div>
+  </body>
+</html>
+
+<script src="/js/index.js"></script>
