--- a/Challenges/express/src/views/products.handlebars
+++ b/Challenges/express/src/views/products.handlebars
@@ -1,3 +1,12 @@
+<ul>
+  <li><a href="#home">Welcome
+      {{profile.firstName}}
+      {{profile.lastName}}</a></li>
+  {{#if profile.admin}}
+    <li><a href="#contact">Config</a></li>
+  {{/if}}
+  <li style="float:right"><a class="logout" id="logout">Log Out</a></li>
+</ul>
 <h1>Products List</h1>
 <div>
   <p id="products"></p>
