Cookies, Session & Storage II

--- a/Exercises/19_cookies_II/src/views/login.handlebars
+++ b/Exercises/19_cookies_II/src/views/login.handlebars
@@ -1,5 +1,6 @@
 <form>
   <div class="container">
+    <p id="para"></p>
     <label for="uname"><b>Username</b></label>
     <input
       type="text"
