--- a/Exercises/19_cookies_II/src/public/css/signup.css
+++ b/Exercises/19_cookies_II/src/public/css/signup.css
@@ -1,6 +1,6 @@
 body {
   align-items: center;
-  background-color: #000;
+  background-color: white;
   display: flex;
   justify-content: center;
   height: 100vh;
