--- a/Challenges/express/src/views/login.handlebars
+++ b/Challenges/express/src/views/login.handlebars
@@ -1,13 +1,13 @@
 <form>
   <div class="container">
     <p id="para"></p>
-    <label for="uname"><b>Username</b></label>
+    <label for="email"><b>Email</b></label>
     <input
       type="text"
-      placeholder="Enter Username"
-      name="uname"
+      placeholder="Enter Email"
+      name="email"
       required
-      id="uname"
+      id="email"
     />
     <label for="psw"><b>Password</b></label>
     <input
@@ -19,6 +19,7 @@
     />
 
     <button type="text" id="login">Login</button>
+    <button type="text" id="github">Login using GitHub</button>
     <label>
       <input type="checkbox" checked="checked" name="remember" />
       Remember me
