--- a/Challenges/express/src/views/login.handlebars
+++ b/Challenges/express/src/views/login.handlebars
@@ -24,7 +24,8 @@
       <input type="checkbox" checked="checked" name="remember" />
       Remember me
     </label>
-  </div>
+
+    <button type="text" id="signup">Signup</button>
 
   <div class="container" style="background-color:#f1f1f1">
     <button type="button" class="cancelbtn">Cancel</button>
