--- a/Challenges/express/src/public/css/products.css
+++ b/Challenges/express/src/public/css/products.css
@@ -51,7 +51,8 @@ li a:hover:not(.active) {
   background-color: #111;
 }
 
-.logout {
+.logout,
+.cart {
   padding: 16px;
   width: 100%;
   border: none;
