--- a/Challenges/express/src/views/products.handlebars
+++ b/Challenges/express/src/views/products.handlebars
@@ -6,6 +6,7 @@
   {{#if profile.admin}}
     <li><a href="#contact">Config</a></li>
   {{/if}}
+  <li style="float:left"><a class="cart" id="cart">View Cart</a></li>
   <li style="float:right"><a class="logout" id="logout">Log Out</a></li>
 </ul>
 <h1>Products List</h1>
